--- a/docs/DEVELOPMENT.org
+++ b/docs/DEVELOPMENT.org
@@ -144,7 +144,7 @@ O2BPASSWORD="password"
     - If you need a test WordPress system to use you can set up a free WordPress blog [[https://wordpress.com][here]].
   - Manual System Testing
     - Here is a detailed [[./docs/TestPlan.org][Test Plan]] for manually testing every feature of this system. It's a great way to see everything that can be done with Org2Blog.
-- [[./docs/ReleaseProcess.org][Release Process]].
+- [[./ReleaseProcess.org][Release Process]].
 - Rules
   - [[https://alphapapa.github.io/dont-tread-on-emacs/][Don't Tread On Emacs]].
   - [[./.github/CODE_OF_CONDUCT.org][Code of Conduct]].
